<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TvResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioGroup
            android:id="@+id/RadGrpSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/RadBtnTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Total"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/RadBtnToday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Today"
                android:textSize="20sp" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/RadGrpDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/RadBtnDate1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Date_1"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/RadBtnDate2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Date_2"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/RadBtnDate3"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:text="@string/Date_3"
                android:textSize="20sp" />

        </RadioGroup>

        <Button
            android:id="@+id/BtnDo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Do"
            android:textSize="24sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>